# wandbctl

./: README.md  pyproject.toml
src/wandbctl/: __init__.py  api.py  cache.py  cli.py
src/wandbctl/commands/: __init__.py  clean.py  compare.py  costs.py  export.py  failures.py  health.py  preflight.py  projects.py  summary.py  sync.py  top.py  trends.py  usage.py  zombies.py
src/wandbctl/utils/: __init__.py  config.py  display.py
tests/: __init__.py  test_cache.py  test_config.py  test_trends.py  test_zombies.py
