[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wandbctl"
version = "0.1.0"
description = "CLI tool for monitoring, auditing, and analyzing Weights & Biases usage"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "wandbctl contributors" }
]
keywords = ["wandb", "weights-and-biases", "ml", "monitoring", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.0",
    "wandb>=0.15",
    "duckdb>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
wandbctl = "wandbctl.cli:cli"

[project.urls]
Homepage = "https://github.com/wandbctl/wandbctl"
Documentation = "https://github.com/wandbctl/wandbctl#readme"
Repository = "https://github.com/wandbctl/wandbctl"

[tool.hatch.build.targets.wheel]
packages = ["src/wandbctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
